fixed many, many more bugfixes, including glows, overflows, and alignment. Nearing the end of the page for sure now

--- a/src/styles/contactUsSection.css
+++ b/src/styles/contactUsSection.css
@@ -20,6 +20,7 @@
 /* Header + subtitle wrapper */
 .headerBox {
     text-align: center;
+    width: 41%;
     margin-left: 10dvh;
     margin-right: 3dvh;
     padding: 4dvh;
